--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "jflores-portfolio",
+  "homepage": "https://jflores0815.github.io/jflores-portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
