--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jflores-portfolio",
   "homepage": "https://jflores0815.github.io/jflores-portfolio/",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
